--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <!-- rebuild trigger: update VITE_API_BASE -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Merchant Dashboard</title>
