--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,5 +56,9 @@
 
     <!-- ✅ Vite entry point -->
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+  window.__API_BASE = "https://whatsapp-saas-backend-f9ot.onrender.com";
+  window.__API_KEY = "S3cR3t-1234-DoNotShare";
+</script>
   </body>
 </html>
